// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge tests AllBadges snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    All badges:
  </Text>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#2C2C2C",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Rubik-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#2C2C2C",
              "fontFamily": "Rubik-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#C7C7D2",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Rounded Badge
      </Text>
      <View
        borderRadius={12}
        size={24}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#4D37D9",
              "borderRadius": 12,
              "flexDirection": "row",
              "height": 24,
              "justifyContent": "center",
              "minWidth": 24,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Rubik-Bold"
          fontSize={14}
          lineHeight={20}
          style={
            [
              {
                "color": "#2C2C2C",
                "fontFamily": "Rubik-Bold",
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          9
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#2C2C2C",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Rubik-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#2C2C2C",
              "fontFamily": "Rubik-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#C7C7D2",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Small Square Badge
      </Text>
      <View
        borderRadius={7}
        size={18}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#4D37D9",
              "borderRadius": 7,
              "flexDirection": "row",
              "height": 18,
              "justifyContent": "center",
              "minWidth": 18,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#1CC577",
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Rubik-ExtraBold"
          fontSize={10}
          lineHeight={14}
          style={
            [
              {
                "color": "#2C2C2C",
                "fontFamily": "Rubik-ExtraBold",
                "fontSize": 10,
                "lineHeight": 14,
              },
              {
                "color": "#FFFFFF",
              },
              {
                "letterSpacing": 1.5,
              },
            ]
          }
        >
          NEW
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#2C2C2C",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Rubik-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#2C2C2C",
              "fontFamily": "Rubik-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#C7C7D2",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Regular Square Badge
      </Text>
      <View
        borderRadius={7}
        size={24}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#4D37D9",
              "borderRadius": 7,
              "flexDirection": "row",
              "height": 24,
              "justifyContent": "center",
              "minWidth": 24,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#1CC577",
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Rubik-Bold"
          fontSize={14}
          lineHeight={20}
          style={
            [
              {
                "color": "#2C2C2C",
                "fontFamily": "Rubik-Bold",
                "fontSize": 14,
                "lineHeight": 20,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          Often chosen
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "borderColor": "#2C2C2C",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Rubik-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#2C2C2C",
              "fontFamily": "Rubik-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#C7C7D2",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Square Badge With Icon
      </Text>
      <View
        borderRadius={7}
        size={20}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#4D37D9",
              "borderRadius": 7,
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "minWidth": 20,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          style={
            [
              {
                "paddingRight": 4,
              },
            ]
          }
        >
          <test-file-stub
            fill="#4D37D9"
            height={16}
            width={16}
          />
        </View>
        <Text
          color="#4D37D9"
          fontFamily="Rubik-Bold"
          fontSize={12}
          lineHeight={18}
          style={
            [
              {
                "color": "#2C2C2C",
                "fontFamily": "Rubik-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              },
              {
                "color": "#4D37D9",
              },
            ]
          }
        >
          Premium
        </Text>
      </View>
    </View>
    <View
      style={
        [
          {
            "borderColor": "#2C2C2C",
            "borderRadius": 4,
            "borderStyle": "dashed",
            "borderWidth": 1,
            "marginBottom": 24,
            "marginLeft": 24,
            "marginRight": 24,
            "marginTop": 24,
            "paddingBottom": 16,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 16,
            "width": 370,
          },
        ]
      }
      width={370}
    >
      <Text
        fontFamily="Rubik-Bold"
        fontSize={16}
        lineHeight={20}
        style={
          [
            {
              "color": "#2C2C2C",
              "fontFamily": "Rubik-Bold",
              "fontSize": 16,
              "lineHeight": 20,
            },
            {
              "backgroundColor": "#C7C7D2",
              "left": 16,
              "paddingHorizontal": 8,
              "position": "absolute",
              "top": -12,
            },
          ]
        }
      >
        Square Badge ArrowDown
      </Text>
      <View
        borderRadius={7}
        size={20}
        style={
          [
            {
              "alignItems": "center",
              "alignSelf": "flex-start",
              "backgroundColor": "#4D37D9",
              "borderRadius": 7,
              "flexDirection": "row",
              "height": 20,
              "justifyContent": "center",
              "minWidth": 20,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            {
              "backgroundColor": "#49C4E9",
            },
          ]
        }
      >
        <Text
          color="#FFFFFF"
          fontFamily="Rubik-Bold"
          fontSize={12}
          lineHeight={18}
          style={
            [
              {
                "color": "#2C2C2C",
                "fontFamily": "Rubik-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              },
              {
                "color": "#FFFFFF",
              },
            ]
          }
        >
          10 Années
        </Text>
        <View
          style={
            [
              {
                "backgroundColor": "#4D37D9",
                "borderRadius": 2,
                "bottom": -4,
                "height": 10,
                "position": "absolute",
                "transform": [
                  {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
                "zIndex": -1,
              },
              {
                "backgroundColor": "#49C4E9",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Badge tests RegularSquareBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={7}
    size={24}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#4D37D9",
          "borderRadius": 7,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "minWidth": 24,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#1CC577",
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Rubik-Bold"
      fontSize={14}
      lineHeight={20}
      style={
        [
          {
            "color": "#2C2C2C",
            "fontFamily": "Rubik-Bold",
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      Often chosen
    </Text>
  </View>
</View>
`;

exports[`Badge tests RoundedBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={12}
    size={24}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#4D37D9",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 24,
          "justifyContent": "center",
          "minWidth": 24,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Rubik-Bold"
      fontSize={14}
      lineHeight={20}
      style={
        [
          {
            "color": "#2C2C2C",
            "fontFamily": "Rubik-Bold",
            "fontSize": 14,
            "lineHeight": 20,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      9
    </Text>
  </View>
</View>
`;

exports[`Badge tests SmallSquareBadge snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={7}
    size={18}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#4D37D9",
          "borderRadius": 7,
          "flexDirection": "row",
          "height": 18,
          "justifyContent": "center",
          "minWidth": 18,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#1CC577",
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Rubik-ExtraBold"
      fontSize={10}
      lineHeight={14}
      style={
        [
          {
            "color": "#2C2C2C",
            "fontFamily": "Rubik-ExtraBold",
            "fontSize": 10,
            "lineHeight": 14,
          },
          {
            "color": "#FFFFFF",
          },
          {
            "letterSpacing": 1.5,
          },
        ]
      }
    >
      NEW
    </Text>
  </View>
</View>
`;

exports[`Badge tests SquareBadgeArrowDown snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={7}
    size={20}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#4D37D9",
          "borderRadius": 7,
          "flexDirection": "row",
          "height": 20,
          "justifyContent": "center",
          "minWidth": 20,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#49C4E9",
        },
      ]
    }
  >
    <Text
      color="#FFFFFF"
      fontFamily="Rubik-Bold"
      fontSize={12}
      lineHeight={18}
      style={
        [
          {
            "color": "#2C2C2C",
            "fontFamily": "Rubik-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "color": "#FFFFFF",
          },
        ]
      }
    >
      10 Années
    </Text>
    <View
      style={
        [
          {
            "backgroundColor": "#4D37D9",
            "borderRadius": 2,
            "bottom": -4,
            "height": 10,
            "position": "absolute",
            "transform": [
              {
                "rotate": "45deg",
              },
            ],
            "width": 10,
            "zIndex": -1,
          },
          {
            "backgroundColor": "#49C4E9",
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Badge tests SquareBadgeWithIcon snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Badge:
  </Text>
  <View
    borderRadius={7}
    size={20}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#4D37D9",
          "borderRadius": 7,
          "flexDirection": "row",
          "height": 20,
          "justifyContent": "center",
          "minWidth": 20,
          "paddingBottom": 4,
          "paddingLeft": 8,
          "paddingRight": 8,
          "paddingTop": 4,
        },
        {
          "backgroundColor": "#FFFFFF",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "paddingRight": 4,
          },
        ]
      }
    >
      <test-file-stub
        fill="#4D37D9"
        height={16}
        width={16}
      />
    </View>
    <Text
      color="#4D37D9"
      fontFamily="Rubik-Bold"
      fontSize={12}
      lineHeight={18}
      style={
        [
          {
            "color": "#2C2C2C",
            "fontFamily": "Rubik-Bold",
            "fontSize": 12,
            "lineHeight": 18,
          },
          {
            "color": "#4D37D9",
          },
        ]
      }
    >
      Premium
    </Text>
  </View>
</View>
`;
